@@ -1,0 +1,124 @@
+%%
+%%
+%% harvardbooksastronomy.tex
+%%
+%%   Notes on the books the series Harvard Books on Astronomy
+%%   from the Harvard University Press.  This is information used
+%%   with the book project "Some Important Books in Astronomy
+%%    and Astrophysics in the 20th Century"
+%%
+%%   Copyright 2017 James R. Fowler
+%%
+%%   All rights reserved. No part of this publication may be
+%%   reproduced, stored in a retrival system, or transmitted
+%%   in any form or by any means, electronic, mechanical,
+%%   photocopying, recording, or otherwise, without prior written
+%%   permission of the author.
+%%
+%%
+%%
+\section{Harvard Books on Astronomy}
+
+This information comes in part from the web pages of
+\href{http://www-personal.umich.edu/~rpl/HarvardBooksOnAstronomy.htm}{Rudi
+  Lindner} last accessed on 15 Dec 2017.
+
+The series {\bf Harvard Books on Astronomy} was a collection of popular books
+on astronomical topics with the latest science presented by acknowledged experts
+in the field. There were two series of books, the first running from 1941 to 1951
+and publised by The Blakiston Company of Philadelphia, Pennsylvania. The seconds series
+began in 1951 with revisions of some of the previous editions as well as new books on
+current topics although some books from the first series were dropped.
+
+\subsection{Series One}
+
+Edited by Harlow Shapley and Bart J. Bok.
+
+\begin{tabular}{l l l}
+  Title & Author(s) & Publication Date \\ \hline
+  {\it Earth, Moon, and Planets} & Fred L Whipple & 1st edition Feb 1941 \\
+  & & second printing 1944 \\
+  & & third printing 1945 \\
+  & & fourth printing 1946 \\
+  & & fifth printing 1947 \\ \hline
+  {\it Between the Planets} & Fletcher G. Watson & 1st edition 1941 \\
+  & & second printing 1945 \\ \hline
+  {\it The Milky Way} & Bart J. Bok & 1st edition 1941 \\
+  &  Priscilla F. Bok & 2nd revised edition 1945 \\
+  & & second printing 1946 \\ \hline
+  {\it Atoms, Stars and Nebulae} & Leo Goldberg & 1st edition 1941 \\
+  &  Lawrence H. Aller & second printing 1944 \\
+  & & third printing 1945 \\
+  & & fourth printing 1946 \\
+  & & fifth printing 1950 \\ \hline
+  {\it The Story of Variable Stars} & Leon Campbell &1st edition Oct 1941 \\
+  &  Luigi Jacchia & second printing Feb 1945 \\
+  & & third printing Jan 1946 \\
+  & &  w/additions \\ \hline
+  {\it Galaxies} & Harlow Shapley & 1st edition 1943 \\
+  & & second printing Oct 1944 \\
+  & & third printing 1945 \\
+  & & fourth printing 1947 \\ \hline
+  {\it Telescopes and Accessories} & George Z. Dimitroff & 1st edition Feb 1945 \\
+  &  James G. Baker & second printing Dec 1945 \\
+  & & third printing 1948 \\ \hline
+  {\it Our Sun} & Donald H. Menzel & 1st edition 1949 \\
+  & & second printing 1950 \\ \hline
+  {\it Inside the Stars} &  Theodore E. Sterne & never published \\
+  &  Martin Schwarzchild & \\
+  \hline
+\end{tabular}
+
+The Harvard University Press took over publication of the series in
+1952 when the Blakiston Company ceased to publish works on astrononomy
+following its acquisition by Doubleday Doran in 1951. New editions of
+some of the previous volumes appeared and new titles were added.
+
+\subsection{Second Series}
+
+Editied by Harlow Shapely and Cecilia Payne-Gaposchkin
+
+\begin{tabular}{l l l}
+  Title & Author(s) & Publication Date \\ \hline
+  {\it Earth, Moon and Planets} & Fred L. Whipple & 1st edition 1952 \\
+  & & 2nd edition 1963 \\
+  & & 3rd edition 1968 \\
+  & & second printing unknown \\
+  & & third printing 1970 \\
+  & & fourth printing unknown \\
+  & & fifth printing 1976 \\
+  & & sixth printing 1978 \\
+  retitled {\it Orbiting the Sun} & & new edition  1981 \\ \hline
+  {\it Stars in the Making} & Cecilia Payne-Gaposchkin & 1st edition Nov 1952 \\ \hline
+  {\it Between the Planets} & Fletcher G. Watson & 2nd edition 1956 \\ \hline
+  {\it The Milky Way} & Bart J. Bok & 3rd edition 1957 \\
+  & Priscilla F. Bok & second printing 1968 \\
+  & & 4th edition 1974 \\
+  & & 5th edition 1981 \\ \hline
+  {\it Our Sun} & Donald H. Menzel & 2nd edition 1959 \\ \hline
+  {\it Galaxies} & Harlow Shapely & 2nd edition 1961 \\
+  & revised by Paul W. Hodge & 3rd edition 1972 \\ \hline
+  {\it Tools of the Astronomer} & Gerhard R. Miczaika & 1st edition1961 \\
+  & William M. Sinton & \\ \hline
+  {\it Atoms, Stars and Nebulae} & Lawrence H. Aller & 2nd edition 1971 \\
+  & & second printing 1975 \\
+  & & 3rd edition 1991 \\ \hline
+  {\it Stars and Clusters} & Cecilia Payne-Gaposchkin & 1st edition 1979 \\ \hline
+\end{tabular}
+
+\subsection{ABE Availability}
+
+Telescopes and Accessories
+
+George Z. Dimitroff and James G. Baker
+
+\$15.00 w/DJ ABE
+  
+
+Galaxies
+
+Harlow Shapley
+
+\$17.48 ABE
+
+\$5,995 ABE Shapleys annotated copy
