@@ -1,0 +1,51 @@
+%%
+%%
+%% series.tex
+%%
+%%   Notes on the books and articles that have been part of a series
+%%   from a publisher.  This is information used
+%%   with the book project "Some Important Books in Astronomy
+%%    and Astrophysics in the 20th Century"
+%%
+%%   Copyright 2017 James R. Fowler
+%%
+%%   All rights reserved. No part of this publication may be
+%%   reproduced, stored in a retrival system, or transmitted
+%%   in any form or by any means, electronic, mechanical,
+%%   photocopying, recording, or otherwise, without prior written
+%%   permission of the author.
+%%
+%%
+%%
+\documentclass{article}
+
+\usepackage{hyperref}
+\begin{document}
+
+%% Front matter
+\title{Books Series}
+\author{James R. Fowler}
+\date{copy of \today}
+\maketitle
+
+\tableofcontents
+
+\include{HarvardBooksAstronomy}
+
+\section{Stars and Stellar Systems}
+
+Published by the University of Chicago in the 1960's
+
+\section{The Solar System}
+
+Published by the University of Chicago the series consisted of four volumes.
+
+\begin{tabular}{l l l}
+  title & Editors(s) & Publication Date \\  \hline
+  {\it The Sun} & unknown & 1953 \\
+  {\it The Earth as a Planet} & Gerard P.\ Kuiper & 1954 \\
+  {\it Planets and Comets Part 1} & unknown & unknown \\
+  {\it Planets and Comets Part 2} & unknown & unknown \\  \hline
+\end{tabular}
+
+\end{document}
